crates/formatter/tests/snapshots/snapshots__synapse__common__full_schemas__72__full.sqlite.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table background_updates (
	update_name text not null,
	progress_json text not null,
	depends_on text,
	ordering int not null default 0,
	constraint background_updates_uniqueness unique (update_name)
);
